# SRR

./: .bash_profile  CMakeLists.txt  Makefile
src/: Makefile  main_driver.c
src/OpenCL_Hello/: Makefile  OpenCL_Hello_host.c  work_Hello.c  wyniki.txt
src/OpenCL_info/: Makefile  OpenCL_info.c
src/OpenCL_util/: Makefile  OpenCL_util.c
src/include/: OpenCL_util.h  system_util.h
src/mat_transp/: Makefile  mat_transp_1.cl  mat_transp_2.cl  mat_transp_3.cl  mat_transp_host.c  pkt6.txt  podstawowe.txt
src/platform_files/: make.centos7_nv_ocl  make.intel  make.l404_amd  make.l404_nvidia
src/reduction/: Makefile  pkt3  pkt3 (kopia)  pkt4 (kopia)  pkt6  reduction.cl  reduction_conflict.cl  reduction_host.c  reduction_host.h  reduction_opt.cl  reduction_single.cl  srir lab 7.xlsx  work_reduction.c
src/system_util/: Makefile  system_util.c
src/vec_add/: Makefile  vec_add.cl  vec_add_host.c  vec_add_host.h  vec_add_vect_unroll.cl  work_vec_add.c  wyniki.txt
